--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,33 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+# Environment files
+.env
+backend/.env
+*.env.*
+.env.local
+client/.env
+
+# Recommended ignores
+# Environment files
+.env
+.env.*
+!.env.example
+
+# Build / dependencies
+node_modules/
+dist/
+build/
+coverage/
+
+# Logs / caches
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+.next/
+.cache/
+
+# System files
+.DS_Store
+Thumbs.db
