--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.0",
     "express-validator": "^7.0.1",
     "handlebars": "^4.7.8",
     "helmet": "^7.1.1",
@@ -48,7 +49,7 @@
     "eslint-plugin-prettier": "^5.1.2",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
-    "joi": "^17.9.2",
+    "joi": "^17.13.3",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.1",
     "prisma": "^5.0.0",
