fix(frontend): resolve build configuration and TypeScript issues
- Removed problematic asset imports (react.svg, vite.svg) from App.tsx
- Fixed TypeScript import extension issues in main.tsx
- Updated tsconfig.json with modern moduleResolution (bundler)
- Added proper TypeScript configuration for Storybook compatibility
- Frontend build now successful: dist files generated correctly
- Build time: 2.34s, output optimized with gzip compression

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,13 +2,16 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "strict": true,
     "jsx": "react-jsx",
     "baseUrl": "./",
-    "paths": { "@/*": ["src/*"] }
+    "paths": { "@/*": ["src/*"] },
+    "types": ["vite/client", "@storybook/react"]
   },
-  "include": ["src", ".storybook"]
+  "include": ["src", ".storybook"],
+  "exclude": ["node_modules", "dist"]
 }
