--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.3",
