--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -6,8 +6,7 @@
   },
   "extends": [
     "eslint:recommended",
-    "@typescript-eslint/recommended",
-    "plugin:node/recommended"
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -15,7 +14,7 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint", "node"],
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
@@ -23,9 +22,17 @@
       { "argsIgnorePattern": "^_" }
     ],
     "no-console": "off",
-    "node/no-unsupported-features/es-syntax": "off",
-    "node/no-missing-import": "off",
-    "node/no-empty-function": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-require-imports": "off",
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/no-namespace": "off",
+    "@typescript-eslint/no-empty-object-type": "off",
+    "@typescript-eslint/no-unsafe-function-type": "off",
+    "no-prototype-builtins": "off",
+    "no-case-declarations": "off",
+    "no-constant-condition": "off",
+    "prefer-const": "off",
+    "no-var": "off",
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-empty-function": "off"
   },
