--- a/backend/package.json
+++ b/backend/package.json
@@ -35,8 +35,8 @@
     "test:business-logic": "cross-env NODE_ENV=test jest --config=jest.config.cjs --runInBand --detectOpenHandles --testPathPattern=__tests__/business-logic",
     "test:performance": "cross-env NODE_ENV=test jest --config=jest.config.cjs --runInBand --detectOpenHandles --testPathPattern=__tests__/performance",
     "test:load": "node scripts/load-test.js",
-    "lint": "eslint . --ext .ts,.js",
-    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "lint": "eslint src --ext .ts --no-eslintrc --config .eslintrc.json",
+    "lint:fix": "eslint src --ext .ts --no-eslintrc --config .eslintrc.json --fix",
     "type-check": "tsc --noEmit",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
