--- a/client/package.json
+++ b/client/package.json
@@ -196,7 +196,7 @@
     "@types/jest": "^29.5.8",
     "@types/jest-axe": "^3.5.9",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.19.24",
+    "@types/node": "^20.19.26",
     "@types/react": "^18.3.26",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.7",
@@ -255,7 +255,8 @@
     "tailwindcss": "^3.4.18",
     "trunk": "^1.1.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.0.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "vite": "5.4.21",
     "vitest": "4.0.12"
   },
