Lock TypeScript toolchain to 5.3.3 for stability

--- a/client/package.json
+++ b/client/package.json
@@ -215,7 +215,7 @@
     "@vitejs/plugin-vue": "^4.6.2",
     "@vitest/browser": "4.0.12",
     "@vitest/browser-playwright": "^4.0.12",
-    "@vitest/coverage-v8": "^4.0.12",
+    "@vitest/coverage-v8": "4.0.12",
     "@vitest/ui": "4.0.12",
     "autoprefixer": "^10.4.22",
     "axe-core": "^4.8.2",
@@ -229,7 +229,7 @@
     "eslint-plugin-react": "^7.33.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "eslint-plugin-storybook": "^10.1.7",
+    "eslint-plugin-storybook": "0.6.15",
     "express-rate-limit": "^6.8.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
@@ -257,7 +257,7 @@
     "trunk": "^1.1.0",
     "ts-jest": "^29.1.1",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
+    "typescript": "5.3.3",
     "vite": "5.4.21",
     "vitest": "4.0.12"
   },
