--- a/docs/package.json
+++ b/docs/package.json
@@ -28,6 +28,6 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "5.3.3"
   }
 }
