--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "verify": "powershell -ExecutionPolicy Bypass -File .\\verify-all.ps1",
     "verify:env": "tsx scripts/verify-env.ts",
     "verify:types": "tsc --noEmit",
+    "verify:type-lock": "node -e \"const v=require('typescript').version; if(v!=='5.3.3'){console.error('TypeScript version drift: '+v); process.exit(1)}; console.log('TypeScript locked at', v)\"",
+    "typecheck": "tsc -p tsconfig.typecheck.json --noEmit",
     "health": "node healthcheck.js"
   },
   "dependencies": {
@@ -211,11 +213,14 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^4.0.8",
     "vitest-axe": "^0.1.0"
+  },
+  "overrides": {
+    "typescript": "5.3.3"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
