--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,7 +10,7 @@
     "@prisma/client": "^4.16.2",
     "bcryptjs": "^2.4.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
