--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -64,11 +64,14 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Verify TypeScript lock
+      run: npm run verify:type-lock
+
     - name: Run linting
       run: npm run lint
 
     - name: Run TypeScript checks
-      run: npm run check
+      run: npm run typecheck
 
     - name: Run frontend tests
       run: npm run test
@@ -107,6 +110,12 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
         cache: npm
 
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Verify TypeScript lock
+      run: npm run verify:type-lock
+
     - name: Build application
       run: npm run build
       env:
@@ -133,6 +142,12 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: npm
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Verify TypeScript lock
+      run: npm run verify:type-lock
 
     - name: Build application
       run: npm run build
