--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -116,6 +116,12 @@ jobs:
     - name: Verify TypeScript lock
       run: npm run verify:type-lock
 
+    - name: Run linting
+      run: npm run lint
+
+    - name: Run TypeScript checks
+      run: npm run typecheck
+
     - name: Build application
       run: npm run build
       env:
@@ -149,6 +155,12 @@ jobs:
     - name: Verify TypeScript lock
       run: npm run verify:type-lock
 
+    - name: Run linting
+      run: npm run lint
+
+    - name: Run TypeScript checks
+      run: npm run typecheck
+
     - name: Build application
       run: npm run build
       env:
@@ -175,6 +187,24 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+        cache: npm
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Verify TypeScript lock
+      run: npm run verify:type-lock
+
+    - name: Run linting
+      run: npm run lint
+
+    - name: Run TypeScript checks
+      run: npm run typecheck
+
     - name: Run npm audit
       run: npm audit --audit-level=moderate
 
@@ -197,9 +227,19 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ env.NODE_VERSION }}
+        cache: npm
 
     - name: Install dependencies
       run: npm ci
+
+    - name: Verify TypeScript lock
+      run: npm run verify:type-lock
+
+    - name: Run linting
+      run: npm run lint
+
+    - name: Run TypeScript checks
+      run: npm run typecheck
 
     - name: Build application
       run: npm run build
