--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "db:reset": "prisma migrate reset --force",
     "db:studio": "prisma studio",
     "test": "vitest run",
+    "test:backend": "vitest run --project server",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
@@ -36,9 +37,31 @@
     "prepare": "husky install",
     "postinstall": "prisma generate",
     "verify": "powershell -ExecutionPolicy Bypass -File .\\verify-all.ps1",
-    "verify:env": "tsx scripts/verify-env.ts",
+    "verify:env": "node scripts/verify-env.mjs",
     "verify:types": "tsc --noEmit",
     "verify:type-lock": "node -e \"const v=require('typescript').version; if(v!=='5.3.3'){console.error('TypeScript version drift: '+v); process.exit(1)}; console.log('TypeScript locked at', v)\"",
+    "verify:contract-lock": "node scripts/check-contract-lock.mjs",
+    "relock:contract-lock": "node scripts/relock-contract-lock.mjs",
+    "verify:release-governance": "node scripts/check-release-governance.mjs",
+    "verify:api-version-governance": "node scripts/check-api-version-governance.mjs",
+    "relock:api-version-locks": "node scripts/relock-api-version-locks.mjs",
+    "verify:runtime-invariants": "node scripts/verify-runtime-invariants.mjs",
+    "verify:prod-readiness": "node scripts/verify-prod-readiness.mjs",
+    "verify:prereqs": "node scripts/verify-prereqs.mjs",
+    "verify:chaos": "node scripts/verify-chaos.mjs",
+    "verify:slo": "node --import tsx scripts/verify-slo.mjs",
+    "verify:disaster-recovery": "node scripts/verify-disaster-recovery.mjs",
+    "verify:security": "node scripts/verify-security.mjs",
+    "verify:enterprise-assurance": "node scripts/verify-enterprise-assurance.mjs",
+    "verify:public-trust": "node scripts/verify-public-trust.mjs",
+    "verify:governance-status": "node scripts/verify-governance-status.mjs",
+    "verify:governance-history-chain": "node scripts/verify-governance-history-chain.mjs",
+    "verify:phase4": "node scripts/verify-phase4.mjs",
+    "verify:release-guard": "node scripts/verify-release-guard.mjs",
+    "verify:test-metrics": "node scripts/run-tests-with-metrics.mjs",
+    "relock:test-metrics-baseline": "cross-env UPDATE_TEST_METRICS_BASELINE=true node scripts/run-tests-with-metrics.mjs",
+    "verify:workflow-scripts": "node scripts/verify-workflow-scripts.mjs",
+    "verify:observability-invariants": "node scripts/verify-observability-invariants.mjs",
     "typecheck": "tsc -p tsconfig.typecheck.json --noEmit",
     "health": "node healthcheck.js"
   },
