--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -61,8 +61,14 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
         cache: npm
 
+    - name: Verify Workflow Script Alignment (no CI drift)
+      run: npm run verify:workflow-scripts
+
     - name: Install dependencies
       run: npm ci
+
+    - name: Verify Environment Invariants
+      run: npm run verify:env
 
     - name: Verify TypeScript lock
       run: npm run verify:type-lock
@@ -73,16 +79,20 @@ jobs:
     - name: Run TypeScript checks
       run: npm run typecheck
 
-    - name: Run frontend tests
-      run: npm run test
-      env:
-        CI: true
+    - name: Verify Observability Invariants
+      run: npm run verify:observability-invariants
+
+    - name: Verify Test Performance Metrics (client suite + early warning)
+      run: npm run verify:test-metrics
 
     - name: Run backend tests
       run: npm run test:backend
       env:
         DATABASE_URL: ${{ env.DATABASE_URL }}
         REDIS_URL: ${{ env.REDIS_URL }}
+
+    - name: Verify Release Guard
+      run: npm run verify:release-guard
 
     - name: Generate test coverage
       run: npm run test:coverage
