--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -34,8 +34,14 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Verify Workflow Script Alignment (no CI drift)
+        run: npm run verify:workflow-scripts
+
       - name: Install dependencies
         run: npm ci
+
+      - name: Verify Environment Invariants
+        run: npm run verify:env
 
       - name: Verify TypeScript lock
         run: npm run verify:type-lock
@@ -45,6 +51,9 @@ jobs:
 
       - name: Run TypeScript checks
         run: npm run typecheck
+
+      - name: Verify Observability Invariants
+        run: npm run verify:observability-invariants
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
