--- a/.github/workflows/type-lockdown.yml
+++ b/.github/workflows/type-lockdown.yml
@@ -23,8 +23,14 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Verify Workflow Script Alignment (no CI drift)
+        run: npm run verify:workflow-scripts
+
       - name: Install dependencies
         run: npm ci
+
+      - name: Verify Environment Invariants
+        run: npm run verify:env
 
       - name: Verify Type Lock
         run: npm run verify:type-lock
@@ -34,3 +40,6 @@ jobs:
 
       - name: Run TypeScript checks
         run: npm run typecheck
+
+      - name: Verify Observability Invariants
+        run: npm run verify:observability-invariants
