feat: STEP 0 - Operational Baseline (Part 1) - One-command Docker Compose local startup (docker-compose.local.yml) - Comprehensive environment configuration (.env.example with 268 lines) - Health check endpoints (/health, /health/db, /health/redis, /health/all) - Database auto-bootstrap script with demo data seeding - Complete developer README with 10-minute setup guide - Auto-migration and auto-seed on first startup - Health checks for all services (PostgreSQL, Redis, Backend, Frontend) - Demo credentials: admin@accubooks.com / admin123 - Deterministic startup order with service dependencies - Clear logs per service with proper error handling

--- a/.env.example
+++ b/.env.example
@@ -1,48 +1,267 @@
-## AccuBooks environment example (sanitized)
-## Copy to .env (or .env.local) and fill sensitive values locally
+# ========================================
+# AccuBooks Environment Configuration Template
+# ========================================
+# Copy this file to .env.local for local development
+# Copy this file to .env.production for production deployment
+# 
+# IMPORTANT: Never commit .env.local or .env.production to source control
+# All sensitive values must be replaced with real secrets
+# ========================================
 
-# Database
-DATABASE_URL=postgresql://postgres:<REDACTED_DB_PASSWORD>@localhost:5432/accubooks?schema=public
+# ========================================
+# APPLICATION ENVIRONMENT
+# ========================================
+# Environment: development, staging, production
+NODE_ENV=development
 
-# Redis
-REDIS_URL=redis://localhost:6379
+# Application Name
+APP_NAME=AccuBooks
+
+# ========================================
+# DATABASE CONFIGURATION
+# ========================================
+# PostgreSQL connection string
+# Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public
+DATABASE_URL=postgresql://accubooks:CHANGE_ME_DB_PASSWORD@localhost:5432/accubooks_dev?schema=public
+
+# Individual database connection parameters (used by Docker Compose)
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=accubooks
+DB_PASSWORD=CHANGE_ME_DB_PASSWORD
+DB_NAME=accubooks_dev
+
+# Database pool settings
+DB_POOL_MIN=2
+DB_POOL_MAX=10
+
+# ========================================
+# REDIS CONFIGURATION
+# ========================================
+# Redis connection string
+# Format: redis://[:PASSWORD@]HOST:PORT[/DATABASE]
+REDIS_URL=redis://:CHANGE_ME_REDIS_PASSWORD@localhost:6379
+
+# Individual Redis connection parameters
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=<REDACTED_REDIS_PASSWORD>
+REDIS_PASSWORD=CHANGE_ME_REDIS_PASSWORD
 
-# Server
-NODE_ENV=development
-PORT=3000
+# Redis pool settings
+REDIS_POOL_MIN=1
+REDIS_POOL_MAX=10
+
+# ========================================
+# SERVER CONFIGURATION
+# ========================================
+# Backend API port
+PORT=5000
+BACKEND_PORT=5000
+
+# Frontend port
+FRONTEND_PORT=3000
+
+# Host binding (use 0.0.0.0 for Docker, localhost for local)
 HOST=localhost
 
-# Authentication
-JWT_SECRET=<REDACTED_JWT_SECRET>
-SESSION_SECRET=<REDACTED_SESSION_SECRET>
-JWT_REFRESH_SECRET=<REDACTED_JWT_REFRESH_SECRET>
+# ========================================
+# AUTHENTICATION & SECURITY
+# ========================================
+# JWT Secret (minimum 32 characters, use strong random string)
+JWT_SECRET=CHANGE_ME_JWT_SECRET_MINIMUM_32_CHARACTERS_LONG
 
-# Email (SMTP) - replace with your provider credentials
+# JWT Refresh Token Secret (minimum 32 characters)
+JWT_REFRESH_SECRET=CHANGE_ME_REFRESH_SECRET_MINIMUM_32_CHARACTERS_LONG
+
+# Session Secret (minimum 32 characters)
+SESSION_SECRET=CHANGE_ME_SESSION_SECRET_MINIMUM_32_CHARACTERS_LONG
+
+# JWT Token Expiration
+JWT_EXPIRES_IN=7d
+JWT_REFRESH_EXPIRES_IN=30d
+
+# ========================================
+# CORS CONFIGURATION
+# ========================================
+# Allowed origins (comma-separated for multiple origins)
+CORS_ORIGINS=http://localhost:3000,http://localhost:5000
+
+# Enable CORS
+ENABLE_CORS=true
+
+# ========================================
+# URL CONFIGURATION
+# ========================================
+# Frontend URL (used for redirects, emails, etc.)
+FRONTEND_URL=http://localhost:3000
+
+# Backend API URL
+API_URL=http://localhost:5000
+
+# Admin dashboard URL
+ADMIN_URL=http://localhost:3000/admin
+
+# API documentation URL
+DOCS_URL=http://localhost:5000/docs
+
+# ========================================
+# EMAIL CONFIGURATION (SMTP)
+# ========================================
+# SMTP server settings
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_SECURE=true
-SMTP_USER=<REDACTED_SMTP_USER>
-SMTP_PASS=<REDACTED_SMTP_PASS>
-MAIL_FROM=no-reply@yourdomain.com
 
-# Stripe (do NOT place live keys here; use test keys in CI securely)
-STRIPE_SECRET_KEY=<REDACTED_STRIPE_SECRET>
-STRIPE_PUBLISHABLE_KEY=<REDACTED_STRIPE_PUBLISHABLE>
-STRIPE_WEBHOOK_SECRET=<REDACTED_STRIPE_WEBHOOK_SECRET>
+# SMTP authentication
+SMTP_USER=CHANGE_ME_SMTP_USER@gmail.com
+SMTP_PASSWORD=CHANGE_ME_SMTP_APP_PASSWORD
 
-# URLs
-FRONTEND_URL=http://localhost:3000
-ADMIN_URL=http://localhost:3000/admin
-API_URL=http://localhost:3000/api
-DOCS_URL=http://localhost:3000/docs
+# Email sender
+EMAIL_FROM=AccuBooks <noreply@accubooks.com>
+MAIL_FROM=noreply@accubooks.com
 
-# Logging & monitoring
+# ========================================
+# STRIPE PAYMENT CONFIGURATION
+# ========================================
+# Stripe API keys (use test keys for development)
+# Get keys from: https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY=sk_test_CHANGE_ME_STRIPE_SECRET_KEY
+STRIPE_PUBLISHABLE_KEY=pk_test_CHANGE_ME_STRIPE_PUBLISHABLE_KEY
+
+# Stripe webhook secret (for webhook signature verification)
+# Get from: https://dashboard.stripe.com/webhooks
+STRIPE_WEBHOOK_SECRET=whsec_CHANGE_ME_WEBHOOK_SECRET
+
+# Stripe webhook URL (must be publicly accessible for production)
+STRIPE_WEBHOOK_URL=http://localhost:5000/api/webhooks/stripe
+
+# Stripe price IDs for subscription plans
+STRIPE_PRICE_FREE=price_free_tier_id
+STRIPE_PRICE_STARTER=price_starter_monthly_id
+STRIPE_PRICE_PROFESSIONAL=price_professional_monthly_id
+STRIPE_PRICE_ENTERPRISE=price_enterprise_monthly_id
+
+# ========================================
+# PLAID BANKING INTEGRATION (OPTIONAL)
+# ========================================
+# Plaid environment: sandbox, development, production
+PLAID_ENV=sandbox
+
+# Plaid credentials
+# Get from: https://dashboard.plaid.com/team/keys
+PLAID_CLIENT_ID=CHANGE_ME_PLAID_CLIENT_ID
+PLAID_SECRET=CHANGE_ME_PLAID_SECRET
+
+# Plaid webhook URL
+PLAID_WEBHOOK_URL=http://localhost:5000/api/webhooks/plaid
+
+# ========================================
+# ANALYTICS & TRACKING (OPTIONAL)
+# ========================================
+# Google Analytics measurement ID
+GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
+
+# Mixpanel project token
+MIXPANEL_TOKEN=CHANGE_ME_MIXPANEL_TOKEN
+
+# PostHog API key
+POSTHOG_API_KEY=CHANGE_ME_POSTHOG_KEY
+
+# ========================================
+# ERROR MONITORING & LOGGING
+# ========================================
+# Sentry DSN for error tracking
+# Get from: https://sentry.io/settings/projects/
+SENTRY_DSN=https://CHANGE_ME@sentry.io/PROJECT_ID
+
+# Log level: debug, info, warn, error
 LOG_LEVEL=info
-SENTRY_DSN=
 
-# Notes
-# - Replace all <REDACTED_...> placeholders with real secrets locally.
-# - Do NOT check real .env files into source control.
+# Structured logging (JSON format)
+LOG_STRUCTURED=true
+
+# Log retention (days)
+LOG_RETENTION_DAYS=30
+
+# ========================================
+# RATE LIMITING
+# ========================================
+# API rate limit (requests per minute)
+RATE_LIMIT_API=100
+
+# Authentication rate limit (requests per minute)
+RATE_LIMIT_AUTH=10
+
+# ========================================
+# CACHING
+# ========================================
+# Cache TTL (seconds)
+CACHE_TTL_DEFAULT=3600
+CACHE_TTL_SHORT=300
+CACHE_TTL_LONG=86400
+
+# Enable compression
+COMPRESSION_ENABLED=true
+
+# ========================================
+# FEATURE FLAGS
+# ========================================
+# Enable/disable features for controlled rollout
+FEATURE_FORECAST_VISUALIZATION=true
+FEATURE_RISK_TIMELINE=true
+FEATURE_TRUST_LAYER=true
+FEATURE_ADVANCED_SCENARIOS=true
+FEATURE_PAYMENT_PROCESSING=false
+FEATURE_API_ACCESS=false
+
+# ========================================
+# AUTO-BOOTSTRAP (DEVELOPMENT ONLY)
+# ========================================
+# Automatically run database migrations on startup
+AUTO_MIGRATE=true
+
+# Automatically seed demo data on first startup
+AUTO_SEED=true
+
+# ========================================
+# DEVELOPMENT & DEBUGGING
+# ========================================
+# Enable debug mode
+DEBUG=false
+
+# Enable API documentation (Swagger/OpenAPI)
+API_DOCS_ENABLED=true
+
+# Enable hot reload
+ENABLE_HOT_RELOAD=true
+
+# ========================================
+# COMPLIANCE & LEGAL
+# ========================================
+# Enable GDPR compliance features
+GDPR_ENABLED=false
+
+# Data retention period (days)
+DATA_RETENTION_DAYS=365
+
+# ========================================
+# MONITORING & HEALTH CHECKS
+# ========================================
+# Health check endpoint timeout (milliseconds)
+HEALTH_CHECK_TIMEOUT=5000
+
+# Enable detailed health check responses
+HEALTH_CHECK_DETAILED=true
+
+# ========================================
+# NOTES & INSTRUCTIONS
+# ========================================
+# 1. Copy this file to .env.local for local development
+# 2. Replace all CHANGE_ME_* placeholders with real values
+# 3. Generate secure random strings for secrets:
+#    - Use: openssl rand -base64 32
+#    - Or: node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
+# 4. Never commit .env.local or .env.production to source control
+# 5. For production, use environment variables or secret management service
+# 6. Test keys are safe for development, but use live keys in production
+# ========================================
