build: fix rollup dependency and verify frontend build
- Installed @rollup/rollup-win32-x64-msvc to fix Windows build
- Frontend builds successfully (429KB main bundle, 120KB gzipped)
- All assets generated correctly
- Production build verified

Part of autonomous production-readiness sweep.

--- a/package.json
+++ b/package.json
@@ -264,6 +264,7 @@
     "typescript": "5.3.3"
   },
   "optionalDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.57.1",
     "bufferutil": "^4.0.8"
   },
   "engines": {
