fix: WSL esbuild dependency issue - add Linux binary installer
Created fix_wsl_dependencies.sh to resolve esbuild binary mismatch in WSL.

Issue: npm installed from Windows includes Windows binaries, but WSL needs
Linux binaries for tsx/esbuild to work.

Solution: Script removes Windows binaries and installs Linux-specific versions:
- @esbuild/linux-x64
- esbuild with Linux binary

This fixes the deployment failure where backend crashes with:
'You installed esbuild for another platform than the one you're currently using'

Run this script before deploy_all.sh in WSL environment.

--- a/package.json
+++ b/package.json
@@ -223,7 +223,7 @@
     "dotenv-cli": "^7.3.0",
     "drizzle-kit": "^0.31.6",
     "envalid": "^8.1.0",
-    "esbuild": "^0.25.0",
+    "esbuild": "^0.25.12",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -264,6 +264,7 @@
     "typescript": "5.3.3"
   },
   "optionalDependencies": {
+    "@esbuild/linux-x64": "^0.27.2",
     "@rollup/rollup-win32-x64-msvc": "^4.57.1",
     "bufferutil": "^4.0.8"
   },
