--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -24,13 +24,7 @@
     "allowImportingTsExtensions": false
   },
   "include": [
-    "server/index.ts",
-    "server/routes.ts",
-    "server/routes/*.ts",
-    "server/middleware/*.ts",
-    "server/db.ts",
-    "server/prisma.ts",
-    "shared/schema.ts"
+    "server/production-server.ts"
   ],
   "exclude": [
     "node_modules",
