--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -36,7 +36,7 @@ FROM node:18-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
-ENV PORT=5000
+ENV PORT=10000
 
 # Install runtime dependencies
 RUN apk add --no-cache dumb-init curl
@@ -56,9 +56,9 @@ COPY --from=builder --chown=nodejs:nodejs /app/shared ./shared
 
 USER nodejs
 
-EXPOSE 5000
+EXPOSE 10000
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD curl -f http://localhost:5000/health || exit 1
+  CMD curl -f http://localhost:10000/api/health || exit 1
 
-CMD ["dumb-init", "node", "dist/server/index.js"]
+CMD ["dumb-init", "node", "dist/server/production-server.js"]
