Fix Dockerfile.backend: use npm ci with legacy-peer-deps for production dependencies

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,7 +7,7 @@ WORKDIR /app
 
 # Copy package files
 COPY package.json package-lock.json* ./
-RUN npm install --only=production --ignore-scripts || npm install --production
+RUN npm ci --only=production --ignore-scripts || npm install --production --legacy-peer-deps
 
 # =======================================
 # Builder Stage
