--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,15 +1,15 @@
 # =======================================
-# AccuBooks Frontend - Production Build
+# ChronaWorkFlow Frontend - Production Build
 # =======================================
-# Builder Stage
+# Stage 1: Build
 # =======================================
-FROM node:20-alpine AS builder
+FROM node:18-alpine AS builder
 WORKDIR /app
 
-# Copy package files and install ALL dependencies for build
+# Copy package files
 COPY client/package.json client/package-lock.json* ./client/
 WORKDIR /app/client
-RUN npm install --ignore-scripts || npm install --legacy-peer-deps --ignore-scripts
+RUN npm install --legacy-peer-deps
 
 # Copy source code
 WORKDIR /app
@@ -22,14 +22,17 @@ WORKDIR /app/client
 RUN npm run build
 
 # =======================================
-# Production Runtime with Nginx
+# Stage 2: Serve with Nginx
 # =======================================
-FROM nginx:alpine AS runner
+FROM nginx:alpine
 
-# Copy custom nginx config
+# Copy built assets
+COPY --from=builder /app/client/dist /usr/share/nginx/html
+
+# Copy nginx config
 COPY <<EOF /etc/nginx/conf.d/default.conf
 server {
-    listen 8080;
+    listen 80;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
@@ -45,25 +48,12 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # SPA routing
+    # SPA routing - serve index.html for all routes
     location / {
         try_files \$uri \$uri/ /index.html;
     }
 
-    # API proxy to backend
-    location /api {
-        proxy_pass http://accubooks-backend:5000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade \$http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host \$host;
-        proxy_cache_bypass \$http_upgrade;
-        proxy_set_header X-Real-IP \$remote_addr;
-        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto \$scheme;
-    }
-
-    # Health check endpoint
+    # Health check
     location /health {
         access_log off;
         return 200 "healthy\n";
@@ -72,23 +62,6 @@ server {
 }
 EOF
 
-# Copy built assets
-COPY --from=builder /app/client/dist /usr/share/nginx/html
-
-# Create nginx user and set permissions
-RUN chown -R nginx:nginx /usr/share/nginx/html && \
-    chown -R nginx:nginx /var/cache/nginx && \
-    chown -R nginx:nginx /var/log/nginx && \
-    chown -R nginx:nginx /etc/nginx/conf.d && \
-    touch /var/run/nginx.pid && \
-    chown -R nginx:nginx /var/run/nginx.pid
-
-# Run as non-root
-USER nginx
-
-EXPOSE 8080
-
-HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
