--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -14,11 +14,8 @@ COPY . .
 # Install dependencies with ignore-scripts to skip postinstall
 RUN npm install --legacy-peer-deps --ignore-scripts
 
-# Generate Prisma client
-RUN npx prisma generate
-
-# Build backend
-RUN npm run build:backend
+# Build simple backend (no database dependencies)
+RUN npm run build:simple
 
 # Remove dev dependencies
 RUN npm prune --production
@@ -27,4 +24,4 @@ ENV NODE_ENV=production
 
 EXPOSE 10000
 
-CMD ["node", "dist/server/production-server.js"]
+CMD ["node", "dist/simple-production-server.js"]
