--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "reset": "npm run clean && npm install",
     "prepare": "husky install",
     "verify": "powershell -ExecutionPolicy Bypass -File .\\verify-all.ps1",
+    "verify:e2e": "node scripts/verify-e2e.mjs",
+    "verify:e2e:build": "node scripts/verify-e2e.mjs --with-build",
     "verify:env": "node scripts/verify-env.mjs",
     "verify:types": "tsc --noEmit",
     "verify:type-lock": "node -e \"const v=require('typescript').version; if(v!=='5.3.3'){console.error('TypeScript version drift: '+v); process.exit(1)}; console.log('TypeScript locked at', v)\"",
