fix(ci): use tsconfig.build.json for type checking to exclude test files

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -81,7 +81,7 @@ jobs:
       # STEP 6: TypeScript Check (No Emit)
       # ============================================
       - name: TypeScript Strict Check
-        run: npx tsc --noEmit
+        run: npx tsc --project tsconfig.build.json --noEmit
       
       # ============================================
       # STEP 7: Production Build
