--- a/backend/package.json
+++ b/backend/package.json
@@ -61,6 +61,7 @@
     "@prisma/client": "^5.22.0",
     "@types/glob": "^8.1.0",
     "bcryptjs": "^2.4.3",
+    "bufferutil": "^4.1.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
