--- a/backend/package.json
+++ b/backend/package.json
@@ -58,7 +58,7 @@
     "postinstall": "prisma generate --schema prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
+    "@prisma/client": "5.22.0",
     "@types/glob": "^8.1.0",
     "bcryptjs": "^2.4.3",
     "bufferutil": "^4.1.0",
