--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -76,6 +76,8 @@ jobs:
       # ============================================
       - name: Validate Prisma Schema
         run: npx prisma validate
+        env:
+          DATABASE_URL: postgresql://test:test@localhost:5432/test
       
       # ============================================
       # STEP 6: TypeScript Check (No Emit)
